unpackaged/main/default/objects/pse__Practice_Actuals__c/pse__Practice_Actuals__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__PracticeActualsHelp</customHelpPage>
    <description>Represents rolled-up revenues and costs expressed in the practice currency for a particular time period, as well as total hours for the parent practice. Practices and time periods have a master-detail relationship with group actuals.</description>
    <label>Practice Actuals</label>
    <nameField>
        <label>Practice Actuals For</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practice Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>