unpackaged/main/default/objects/pse__Practice_Actuals__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Practice Actuals</relationshipLabel>
    <relationshipName>Practice_Actuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>