unpackaged/main/default/objects/pse__Practice_Actuals__c/fields/pse__Practice_Head__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice_Head__c</fullName>
    <formula>pse__Practice__r.pse__Practice_Head__r.FirstName &amp; " " &amp; pse__Practice__r.pse__Practice_Head__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Owner</label>
    <type>Text</type>
</CustomField>