unpackaged/main/default/objects/pse__Practice_Actuals__c/validationRules/pse__Practice_Actuals_Currency_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Practice_Actuals_Currency_Mismatch</fullName>
    <active>true</active>
    <description>A Practice Actuals record must have the same currency as its parent Practice.</description>
    <errorConditionFormula>AND
(
OR(ISNEW(),ISCHANGED(CurrencyIsoCode)), 
NOT(TEXT(CurrencyIsoCode) = TEXT(pse__Practice__r.CurrencyIsoCode))
)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>A Practice Actuals record must have the same currency as its parent Practice.</errorMessage>
</ValidationRule>